--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax-tilt": "^1.7.212",
     "sass": "^1.71.1"
   },
   "devDependencies": {
